--- a/Growin.Api/Growin.Api.csproj
+++ b/Growin.Api/Growin.Api.csproj
@@ -6,11 +6,22 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>5784d277-0f9b-4ffc-b9b3-fc64abc71f9d</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Growin.ApplicationService\Growin.ApplicationService.csproj" />
+    <ProjectReference Include="..\Growin.Domain\Growin.Domain.csproj" />
+    <ProjectReference Include="..\Growin.Infra\Growin.Infra.csproj" />
   </ItemGroup>
 
 </Project>
