--- a/Growin.ApplicationService/Growin.ApplicationService.csproj
+++ b/Growin.ApplicationService/Growin.ApplicationService.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Features\" />
     <Folder Include="BackgroundServices\" />
+    <Folder Include="Features\Orders\QueryHandlers\" />
+    <Folder Include="Features\Orders\Queries\" />
     <Folder Include="Mappers\" />
   </ItemGroup>
 
@@ -16,4 +17,10 @@
     <ProjectReference Include="..\Growin.Domain\Growin.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
 </Project>
