--- a/Growin.Domain/Growin.Domain.csproj
+++ b/Growin.Domain/Growin.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
+    <PackageReference Include="FunctionalConcepts" Version="6.0.0.4" />
   </ItemGroup>
 
 </Project>
