added dependencies to the injector

--- a/Growin.Api/appsettings.json
+++ b/Growin.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "PrincipalDb": "Host=;Port=5432;Username=;Password=;Database="
+  },
   "AllowedHosts": "*"
 }
