--- a/Growin.Api/appsettings.Development.json
+++ b/Growin.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "PrincipalDb": "Host=postgres_container;Port=5432;Username=admin;Password=Sup3rS3cr3t;Database=growindb"
   }
 }
