--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.4'
+
 services:
     postgresql:
         image: postgres:latest
@@ -26,11 +28,23 @@ services:
         build:
             context: .
             dockerfile: Growin.Api/Dockerfile
+        ports:
+          - "8080"
+          - "8081"
+        volumes:
+          - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+          - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
         environment:
+            ASPNETCORE_ENVIRONMENT: Development
+            ASPNETCORE_HTTP_PORTS: 8080
+            ASPNETCORE_HTTPS_PORTS: 8081
             DB_USER: ${DB_USER}
             DB_PASSWORD: ${DB_PASSWORD}
             DB_NAME: ${DB_NAME}
             DB_HOST: ${DB_HOST}
             DB_PORT: ${DB_PORT}
+            ConnectionString__PrincipalDb: Host=${DB_HOST};Port=${DB_PORT};Username=${DB_USER};Password=${DB_PASSWORD};Database=${DB_NAME}
         depends_on:
             - postgresql
+volumes:
+    pgdata:
