--- a/Growin.Api/appsettings.Development.json
+++ b/Growin.Api/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "PrincipalDb": "Host=postgres_container;Port=5432;Username=admin;Password=Sup3rS3cr3t;Database=growindb"
+  },
+  "Order": {
+    "CancelMinutes": 5
   }
 }
