create worker. unit tests for worker. fix update error because work needed to get every time product

--- a/Growin.Api/appsettings.Development.json
+++ b/Growin.Api/appsettings.Development.json
@@ -8,7 +8,9 @@
   "ConnectionStrings": {
     "PrincipalDb": "Host=postgres_container;Port=5432;Username=admin;Password=Sup3rS3cr3t;Database=growindb"
   },
-  "Order": {
-    "CancelMinutes": 5
+  "Workers": {
+    "OrderStatusCancelWorker": {
+      "CancelMinutes": 5
+    }
   }
 }
