create handler to get all products and unit tests

--- a/Growin.Api/appsettings.Development.json
+++ b/Growin.Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "PrincipalDb": "Host=postgres_container;Port=5432;Username=admin;Password=Sup3rS3cr3t;Database=growindb"
+    "PrincipalDb": "Host=postgresql;Port=5432;Username=admin;Password=Sup3rS3cr3t;Database=growindb"
   },
   "Workers": {
     "OrderStatusCancelWorker": {
