move backend to a new folder

--- a/Backend/Growin.Api.Tests/Growin.Api.Tests.csproj
+++ b/Backend/Growin.Api.Tests/Growin.Api.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Growin\Growin.Api\Growin.Api.csproj" />
+    <ProjectReference Include="..\Growin.Api\Growin.Api.csproj" />
   </ItemGroup>
 
   <ItemGroup>
