added migrate on constructor for create db and data

--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -25,6 +25,8 @@ services:
             - postgresql
     growin.api:
         image: ${DOCKER_REGISTRY-}growinapi
+        env_file:
+            - .env
         build:
             context: .
             dockerfile: Growin.Api/Dockerfile
