pequena mudança no compose para a porta ficar correta no comando. adicionado readme. corrigido enum que não era necessario devido a utilização de apenas 3 estado. fix test. endpoint da api apostando para a instancia que será feita do container.

--- a/Backend/Growin.Api/appsettings.Development.json
+++ b/Backend/Growin.Api/appsettings.Development.json
@@ -10,7 +10,8 @@
   },
   "Workers": {
     "OrderStatusCancelWorker": {
-      "CancelMinutes": 5
+      "NextIteratorInSeconds": 60,
+      "CancellOrderInSeconds": 60
     }
   }
 }
